# c-subprocess

./: CMakeLists.txt  README.md
inc/: subprocess.h  subprocess_attr.h
src/: subprocess.c  subprocess_attr.c
test/: main.c
